improvements to page a style and layout

--- a/pageA.html
+++ b/pageA.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page A</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h2>Page A</h2>
+    <ul>
+        <li>One</li>
+        <li>Two</li>
+    </ul>
 </body>
 </html>
