new styling for page b

--- a/pageB.html
+++ b/pageB.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page B</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h3>Page B</h3>
     <p>This is page b.</p>
+    <footer>
+        <p>&copy; Sky 2023</p>
+    </footer>
 </body>
 </html>
